--- a/views/layout.erb
+++ b/views/layout.erb
@@ -46,7 +46,9 @@
         </div>
       </div>
     </div>
-
+<div id='flash' class='notice'>
+  <%= flash[:notice] %>
+</div>
     <div class="container">
       <h1><%= yield %></h1>
 
