--- a/views/domini.erb
+++ b/views/domini.erb
@@ -1,21 +1,26 @@
- <table class="table table-striped"> 
+ <table class="table table-striped table-bordered table-condensed"> 
   <tr>
     <td>#</td>
-   <td>Dominio</td>
-<td>Seriale</td>
-<td>data di creazione</td>
-<td>data di modifica</td> 
+   <td>Zone name</td>
+<td>Serial</td>
+<!-- <td>creation date</td> -->
+<td>update date</td> 
 <td>ttl</td>
-<td>stato</td>
+<td>active</td>
+<td>action</td>
  <% @zone.each do |record| %>       	         
   <tr>
    <td><%= record['id'] %></td>
    <td><a href="/zona/<%= record['name'] %>/edit"><%= record['name'] %></></td>
    <td><%= record['serial'] %></td>
-   <td><%= record['created_at'] %></td>
+   <!-- <td><%= record['created_at'] %></td> -->
    <td><%= record['updated_at'] %></td>
    <td><%= record['ttl'] %></td>
    <td><%= record['active'] %></td>
-  </tr>
+    <td>
+        <a class="btn btn-small" href="/zona/<%= record['name'] %>/edit"><i class="icon-cog"></i> Edit</a>
+        <a class="btn btn-danger" href="#"><i class="icon-trash icon-white"></i> Del</a>
+   </td> 
+ </tr>
   <% end %>
 </table>
