--- a/views/domini.erb
+++ b/views/domini.erb
@@ -1,20 +1,20 @@
  <table class="table table-striped table-bordered table-condensed"> 
   <tr>
-    <td>#</td>
-   <td>Zone name</td>
-<td>Serial</td>
+    <td class="hidden">#</td>
+   <td>zone name</td>
+<td>serial</td>
 <!-- <td>creation date</td> -->
-<td>update date</td> 
+<!-- <td>update date</td> -->
 <td>ttl</td>
 <td>active</td>
 <td>action</td>
  <% @zone.each do |record| %>       	         
   <tr>
-   <td><%= record['id'] %></td>
+   <td class="hidden"><%= record['id'] %></td>
    <td><a href="/zona/<%= record['name'] %>/edit"><%= record['name'] %></></td>
    <td><%= record['serial'] %></td>
    <!-- <td><%= record['created_at'] %></td> -->
-   <td><%= record['updated_at'] %></td>
+   <!-- <td><%= record['updated_at'] %></td> -->
    <td><%= record['ttl'] %></td>
    <td><%= record['active'] %></td>
     <td>
